name:               ian-pw
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , containers == 0.5.7.1
                  , pandoc == 1.19.1
                  , filepath == 1.4.*
                  , binary == 0.8.*
  ghc-options:      -threaded
  default-language: Haskell2010
