name:               ian-pw
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , containers == 0.6.0.1
                  , pandoc == 2.5
                  , filepath == 1.4.*
                  , binary == 0.8.*

  ghc-options:      -threaded
  default-language: Haskell2010
